--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 								<li><a href="#intro">MY GYM</a></li>
 								<li><a href="#work">MMA</a></li>
 								<li><a href="#about">ME</a></li>
-								<li><a href="#contact">KONTAKT</a></li>
+								<li><a href="#contact">CONTACT</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
