--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>SAID MMA</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -31,9 +31,9 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">MY GYM</a></li>
-								<li><a href="#work">MMA</a></li>
-								<li><a href="#about">ME</a></li>
+								<li><a href="#intro">MMA</a></li>
+								<li><a href="#work">ME</a></li>
+								<li><a href="#about">FIGHTS</a></li>
 								<li><a href="#contact">CONTACT</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
