--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 						<div class="content">
 							<div class="inner">
 								<h1>SAID SAIDI</h1>
-								<p>Ich bin ein MMA Kämpfer, und kämpfe bei der GMC <a href="https://www.german-mma.de/">HTML5 UP</a> begleite mich<br />
-								und folge mir, mein gym: Combat Club Cologne <a href="https://www.combat-club.de/">Creative Commons</a> license.</p>
+								<p>Ich bin ein MMA Kämpfer, und kämpfe bei der GMC <a href="https://www.german-mma.de/">GMC</a> begleite mich<br />
+								und folge mir, mein gym: Combat Club Cologne <a href="https://www.combat-club.de/">Combat Club</a> license.</p>
 							</div>
 						</div>
 						<nav>
