--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>SAID SAIDI</h1>
+								<h1>SAID DA LION</h1>
 								<p>Ich bin ein MMA Kämpfer, und kämpfe bei der GMC <a href="https://www.german-mma.de/">GMC</a> begleite mich<br />
 								und folge mir, mein gym: Combat Club Cologne <a href="https://www.combat-club.de/">Combat Club</a> license.</p>
 							</div>
@@ -343,7 +343,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://www.facebook.com/HazeBunny/">MIKE NSN(xn4k)</a>.</p>
+						<p class="copyright">&copy; Design: <a href="https://www.facebook.com/HazeBunny/">Mike Nsn(xn4k)</a>.</p>
 					</footer>
 
 			</div>
