--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>SAID DA LION</h1>
-								<p>Ich bin ein MMA Kämpfer, und kämpfe bei der GMC <a href="https://www.german-mma.de/">GMC</a> begleite mich<br />
-								und folge mir, mein gym: Combat Club Cologne <a href="https://www.combat-club.de/">Combat Club</a> license.</p>
+								<h1>Dimension</h1>
+								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
+								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">MMA</a></li>
-								<li><a href="#work">ME</a></li>
-								<li><a href="#about">FIGHTS</a></li>
+								<li><a href="#mma">MMA</a></li>
+								<li><a href="#me">ME</a></li>
+								<li><a href="#fights">FIGHTS</a></li>
 								<li><a href="#contact">CONTACT</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -44,26 +44,27 @@
 					<div id="main">
 
 						<!-- Intro -->
-							<article id="intro">
+							<article id="mma">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p>Mixed Martial Arts (Engl., etwa: Gemischte Kampfkünste, kurz MMA) ist eine Vollkontakt-Kampfsportart. Populär geworden ist MMA Anfang der 1990er Jahre durch die Organisation Ultimate Fighting Championship (UFC), dem weltweit größten Veranstalter dieser Art von Turnieren und deren Übertragung im Fernsehen.Lies über mich hier <a href="#me">mehr</a>.</p>
+								<p>Die Kämpfer bedienen sich sowohl der Schlag- und Tritttechniken (Striking) des Boxens, Kickboxens, Taekwondo, Muay Thai und Karate als auch der Bodenkampf- und Ringtechniken (Grappling) des Brazilian Jiu-Jitsu, Ringens, Judo und Sambo. Auch Techniken aus anderen Kampfkunstarten werden benutzt.Dass auch im Bodenkampf geschlagen und zum Teil getreten werden darf, ist das Hauptunterscheidungsmerkmal zu anderen Vollkontaktsportarten.
+								   Dies führte im Jahr 2010 zum Sendeverbot von MMA-Profikämpfen im deutschen Fernsehen, das im Oktober 2014 aufgehoben wurde.</p>
 							</article>
 
 						<!-- Work -->
-							<article id="work">
+							<article id="me">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p>Mein name ist Said Saidi (Said da Lion) und ich wurde in in Afghanistan geboren.</p>
+								<p>Mit combat Sambo angefangen, startete meine Sportkarriere erst richtig in Deutschland, als ich in 2015 nach Köln kam an.  Ich represente und kämpfe für Deutschland. Mein Ziel ist es in UFC zu kämpfen, ich gebe alles dafür und bin fest davon überzeugt euch alle später mit meinen erfolgen zu überraschen, seid gespannt!</p>
 							</article>
 
 						<!-- About -->
-							<article id="about">
+							<article id="fights">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p>Hier könnt ihr verfolgen welche kämpfe noch bei mir anstehen, bei fragen oder anfragen meldet euch bei in der Spalte <a href="#contact">contact</a> </p>
 							</article>
 
 						<!-- Contact -->
@@ -93,8 +94,7 @@
 									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
+						   </ul>
 							</article>
 
 						<!-- Elements -->
@@ -155,10 +155,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									</ol>
 									<h4>Icons</h4>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 									</ul>
 
 									<h4>Actions</h4>
@@ -343,7 +341,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Design: <a href="https://www.facebook.com/HazeBunny/">Mike Nsn(xn4k)</a>.</p>
+						<p class="copyright">&copy; Untitled. Design: <a href="https://www.facebook.com/HazeBunny/">MIKE NSN(xn4k)</a>.</p>
 					</footer>
 
 			</div>
