--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							<div class="inner">
 								<h1>SAID DA LION</h1>
 								<p>Ich bin ein MMA Kämpfer, und kämpfe bei der GMC <a href="https://www.german-mma.de/">GMC</a> begleite mich<br />
-								und folge mir, mein gym: Combat Club Cologne <a href="https://www.combat-club.de/">Combat Club</a> license.</p>
+								und folge mir, mein gym: Combat Club Cologne <a href="https://www.combat-club.de/">Combat Club</a> .</p>
 							</div>
 						</div>
 						<nav>
