--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 						<!-- Intro -->
 							<article id="mma">
-								<h2 class="major">Intro</h2>
+								<h2 class="major">Mma</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>Mixed Martial Arts (Engl., etwa: Gemischte Kampfkünste, kurz MMA) ist eine Vollkontakt-Kampfsportart. Populär geworden ist MMA Anfang der 1990er Jahre durch die Organisation Ultimate Fighting Championship (UFC), dem weltweit größten Veranstalter dieser Art von Turnieren und deren Übertragung im Fernsehen.Lies über mich hier <a href="#me">mehr</a>.</p>
 								<p>Die Kämpfer bedienen sich sowohl der Schlag- und Tritttechniken (Striking) des Boxens, Kickboxens, Taekwondo, Muay Thai und Karate als auch der Bodenkampf- und Ringtechniken (Grappling) des Brazilian Jiu-Jitsu, Ringens, Judo und Sambo. Auch Techniken aus anderen Kampfkunstarten werden benutzt.Dass auch im Bodenkampf geschlagen und zum Teil getreten werden darf, ist das Hauptunterscheidungsmerkmal zu anderen Vollkontaktsportarten.
@@ -54,7 +54,7 @@
 
 						<!-- Work -->
 							<article id="me">
-								<h2 class="major">Work</h2>
+								<h2 class="major">Me</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>Mein name ist Said Saidi (Said da Lion) und ich wurde in in Afghanistan geboren.</p>
 								<p>Mit combat Sambo angefangen, startete meine Sportkarriere erst richtig in Deutschland, als ich in 2015 nach Köln kam an.  Ich represente und kämpfe für Deutschland. Mein Ziel ist es in UFC zu kämpfen, ich gebe alles dafür und bin fest davon überzeugt euch alle später mit meinen erfolgen zu überraschen, seid gespannt!</p>
@@ -62,7 +62,7 @@
 
 						<!-- About -->
 							<article id="fights">
-								<h2 class="major">About</h2>
+								<h2 class="major">Fights</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p>Hier könnt ihr verfolgen welche kämpfe noch bei mir anstehen, bei fragen oder anfragen meldet euch bei in der Spalte <a href="#contact">contact</a> </p>
 							</article>
