--- a/index.html
+++ b/index.html
@@ -91,9 +91,8 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://www.instagram.com/said_mma_/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						   </ul>
 							</article>
 
@@ -156,7 +155,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									<h4>Icons</h4>
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.instagram.com/said_mma_/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									</ul>
 
 									<h4>Actions</h4>
