--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.facebook.com/pahlowantoofan.afg" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="https://www.instagram.com/said_mma_/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						   </ul>
 							</article>
@@ -154,7 +154,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									</ol>
 									<h4>Icons</h4>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+										<li><a href="https://www.facebook.com/pahlowantoofan.afg" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="https://www.instagram.com/said_mma_/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									</ul>
 
