--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								<h2 class="major">Me</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>Mein name ist Said Saidi (Said da Lion) und ich wurde in in Afghanistan geboren.</p>
-								<p>Mit combat Sambo angefangen, startete meine Sportkarriere erst richtig in Deutschland, als ich in 2015 nach Köln kam an.  Ich represente und kämpfe für Deutschland. Mein Ziel ist es in UFC zu kämpfen, ich gebe alles dafür und bin fest davon überzeugt euch alle später mit meinen erfolgen zu überraschen, seid gespannt!</p>
+								<p>Mit combat Sambo angefangen, startete meine Sportkarriere erst richtig in Deutschland, als ich in 2015 nach Köln kam.  Ich represente und kämpfe für Deutschland. Mein Ziel ist es in UFC zu kämpfen, ich gebe alles dafür und bin fest davon überzeugt euch alle später mit meinen erfolgen zu überraschen, seid gespannt!</p>
 							</article>
 
 						<!-- About -->
