--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Mikhail Zhivoderov Design: <a href="https://www.facebook.com/HazeBunny/">MIKE NSN(xn4k)</a>.</p>
+						<p class="copyright">&copy; Mikhail Zhivoderov Design(HTML5 UP): <a href="https://www.facebook.com/HazeBunny/">MIKE NSN(xn4k)</a>.</p>
 					</footer>
 
 			</div>
