--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 						<div class="content">
 							<div class="inner">
 								<h1>SAID DA LION</h1>
-								<p>Ich bin ein MMA Kämpfer, und kämpfe bei der GMC <a href="https://www.german-mma.de/">GMC</a> begleite mich<br />
-								und folge mir, mein gym: Combat Club Cologne <a href="https://www.combat-club.de/">Combat Club</a> .</p>
+								<p>Ich bin ein MMA Kämpfer und kämpfe bei der<a href="https://www.german-mma.de/">GMC</a> begleite mich<br />
+								und folge mir, mein gym:<a href="https://www.combat-club.de/">Combat Club Cologne</a> .</p>
 							</div>
 						</div>
 						<nav>
@@ -56,15 +56,15 @@
 							<article id="me">
 								<h2 class="major">Me</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Mein name ist Said Saidi (Said da Lion) und ich wurde in in Afghanistan geboren.</p>
-								<p>Mit combat Sambo angefangen, startete meine Sportkarriere erst richtig in Deutschland, als ich in 2015 nach Köln kam.  Ich represente und kämpfe für Deutschland. Mein Ziel ist es in UFC zu kämpfen, ich gebe alles dafür und bin fest davon überzeugt euch alle später mit meinen erfolgen zu überraschen, seid gespannt!</p>
+								<p>Mein name ist Said Saidi (Said da Lion) und ich wurde in Afghanistan geboren.</p>
+								<p>Mit combat Sambo angefangen, startete meine Sportkarriere erst richtig in Deutschland, als ich in 2015 nach Köln kam.  Ich representiere und kämpfe für Deutschland. Mein Ziel ist es in der UFC zu kämpfen, ich gebe alles dafür und bin fest davon überzeugt euch alle später mit meinen erfolgen zu überraschen, seid gespannt Freunde!</p>
 							</article>
 
 						<!-- FIGHTS PART -->
 							<article id="fights">
 								<h2 class="major">Fights</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Hier könnt ihr verfolgen welche kämpfe noch bei mir anstehen, bei fragen oder anfragen meldet euch bei in der Spalte <a href="#contact">contact</a> </p>
+								<p>Hier könnt ihr verfolgen welche kämpfe noch bei mir anstehen, bei fragen oder anfragen meldet euch bei mir in der Spalte <a href="#contact">contact</a> </p>
 							</article>
 
 						<!-- Contact spalte -->
@@ -350,7 +350,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Mikhail Zhivoderov Design(HTML5 UP): <a href="https://www.facebook.com/HazeBunny/">MIKE NSN(xn4k)</a>.</p>
+						<p class="copyright">&copy; Mikhail Zhivoderov (Design(HTML5 UP)): <a href="https://www.facebook.com/HazeBunny/">MIKE NSN(xn4k)</a>.</p>
 					</footer>
 
 			</div>
